--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
             margin-top: 50px;
         }
 
+        h1 {
+            font-size: 36px;
+            color: #333;
+            margin-bottom: 40px;
+        }
+
         .icon-container {
             display: flex;
             justify-content: center;
@@ -52,6 +58,8 @@
     </style>
 </head>
 <body>
+
+    <h1>Sjeakx-blast</h1>
 
     <div class="icon-container">
         <a href="https://sjeakxweb.vercel.app/" target="_blank" class="icon-button">
