--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <img src="https://img.icons8.com/ios-glyphs/60/settings.png" alt="Settings Icon">
         </a>
         <!-- Slightly transparent home icon -->
-        <a href="https://sjeakxweb.vercel.app/" target="_blank" class="icon-button transparent">
+        <a href="https://sjeakx.github.io/Sjeakx-blast/stuff.html" target="_blank" class="icon-button transparent">
             <img src="https://img.icons8.com/ios-glyphs/60/home.png" alt="Transparent Home Icon">
         </a>
     </div>
