--- a/index.html
+++ b/index.html
@@ -73,20 +73,13 @@
 
     <div class="icon-container">
         <a href="https://sjeakxweb.vercel.app/" target="_blank" class="icon-button">
-            <img src="https://img.icons8.com/ios-glyphs/60/home.png" alt="Home Icon">
+            <img src="https://icons8.com/icon/101130/connect" alt="Proxy (go on any website)">
         </a>
-        <a href="https://sjeakxweb.vercel.app/" target="_blank" class="icon-button">
-            <img src="https://img.icons8.com/ios-glyphs/60/settings.png" alt="Settings Icon">
+        <a href="https://macvg-sjeakx.vercel.app/" target="_blank" class="icon-button">
+            <img src="https://icons8.com/icon/bgcDOSDKAuGQ/apple-arcade" alt="">
         </a>
-        <!-- Slightly transparent home icon -->
-        <a href="https://sjeakx.github.io/Sjeakx-blast/stuff.html" target="_blank" class="icon-button transparent">
-            <img src="https://img.icons8.com/ios-glyphs/60/home.png" alt="Transparent Home Icon">
-        </a>
-    </div>
 
-    <button class="bar-button" onclick="window.location.href='https://sjeakxweb.vercel.app/'">
-        Long Bar Button
-    </button>
+    </div>
 
 </body>
 </html>
