--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <img src="https://icons8.com/icon/101130/connect" alt="Proxy (go on any website)">
         </a>
         <a href="https://macvg-sjeakx.vercel.app/" target="_blank" class="icon-button">
-            <img src="https://icons8.com/icon/bgcDOSDKAuGQ/apple-arcade" alt="">
+            <img src="https://icons8.com/icon/bgcDOSDKAuGQ/apple-arcade" alt=Games"">
         </a>
 
     </div>
