--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 
     <div class="icon-container">
         <a href="https://sjeakxweb.vercel.app/" target="_blank" class="icon-button">
-            <img src="https://icons8.com/icon/101130/connect" alt="Proxy (go on any website)">
+            <img src="https://icons8.com/icon/101130/connect" alt="">
         </a>
         <a href="https://macvg-sjeakx.vercel.app/" target="_blank" class="icon-button">
-            <img src="https://icons8.com/icon/bgcDOSDKAuGQ/apple-arcade" alt=Games"">
+            <img src="https://icons8.com/icon/bgcDOSDKAuGQ/apple-arcade" alt="">
         </a>
 
     </div>
