--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <a href="https://nettleweb-sjeakx.vercel.app/" target="_blank" class="icon-button">
             <img src="https://img.icons8.com/?size=100&id=bgcDOSDKAuGQ&format=png&color=000000" alt="">
-            <span class="icon-name">THE Goat Gaming</Visit Apple Arcade> <!-- Name for the second button -->
+            <span class="icon-name">nettleweb</Visit Apple Arcade> <!-- Name for the third button -->
         </a>
     </div>
 
