--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <a href="https://sjeakx.github.io/Sjeakx-blast/telltaleheartscript-backup-main/index.html target="_blank" class="icon-button">
             <img src="https://img.icons8.com/?size=100&id=bgcDOSDKAuGQ&format=png&color=000000" alt="">
-            <span class="icon-name">nettleweb</Visit Apple Arcade> <!-- Name for the third button -->
+            <span class="icon-name">unblocker/games/emulators</Visit Apple Arcade> <!-- Name for the third button -->
         </a>
     </div>
 
