--- a/telltaleheartscript-backup-main/index.html
+++ b/telltaleheartscript-backup-main/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link rel="stylesheet" href="assets/css/main-page.css" />
     <script>
-      let isPPressed = localStorage.getItem("pushing p") === "true";
+      let isPPressed = localStorage.getItem("pushing p") === "false";
 
       function checkUserAgent() {
         const userAgent = navigator.userAgent;
