--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
     <div class="icon-container">
         <a href="https://sjeakxweb.vercel.app/" target="_blank" class="icon-button">
             <img src="https://img.icons8.com/?size=100&id=101130&format=png&color=000000" alt="Connect to Sjeakx">
-            <span class="icon-name">Proxy</span> <!-- Name for the first button -->
+            <span class="icon-name">Proxy(use unblocker)</span> <!-- Name for the first button -->
         
             <a href="https://macvg-sjeakx.vercel.app/" target="_blank" class="icon-button">
             <img src="https://img.icons8.com/?size=100&id=bgcDOSDKAuGQ&format=png&color=000000" alt="">
-            <span class="icon-name">macvg</Visit Apple Arcade> <!-- Name for the second button -->
+            <span class="icon-name">macvg(use unblocker)</Visit Apple Arcade> <!-- Name for the second button -->
 
             <a href="https://nettleweb-sjeakx.vercel.app/" target="_blank" class="icon-button">
             <img src="https://img.icons8.com/?size=100&id=bgcDOSDKAuGQ&format=png&color=000000" alt="">
-            <span class="icon-name">nettleweb</Visit Apple Arcade> <!-- Name for the third button -->
+            <span class="icon-name">nettleweb(use unblocker)</Visit Apple Arcade> <!-- Name for the third button -->
 
             <a href="https://sjeakx.github.io/Sjeakx-blast/telltaleheartscript-backup-main/index.html" target="_blank" class="icon-button">
             <img src="https://img.icons8.com/?size=100&id=bgcDOSDKAuGQ&format=png&color=000000" alt="">
