Update index.html added help

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             document.body.removeChild(tempTextArea);
 
             // Optional: Alert the user that the text has been copied
-            alert('paste in newtab like a url and bookmark it!');
+            alert('paste in newtab like a url and bookmark it if it does not work dissable ublock!');
         }
     </script>
 
