--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <script>
     function checkCode() {
         const codeInput = document.getElementById('codeInput').value;
-        const correctCode = 'cloisteria'; // Change this to your desired code
+        const correctCode = 'ridgeissigma'; // Change this to your desired code
 
         if (codeInput === correctCode) {
             document.getElementById('content').style.display = 'block';
