--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </a>
     </div>
 
-    <button class="copy-button" onclick="copyToClipboard()">nettleweb (paste in new tab)</button>
+    <button class="copy-button" onclick="copyToClipboard()">nettleweb (paste in new tab and use phone hotspot)</button>
 
     <script>
         function copyToClipboard() {
