--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="style.css">`.
     <head>
-    <meta charset="UTF-8">
+   <link rel="stylesheet" type="text/css" href="https://sjeakx.github.io/style.css">
+        <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjeakx Blast</title>
     <style>
