--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@ document.addEventListener("keydown", function (event) {
   }
 });
 </script>
+
+<div id="background-wrap">
+    <div class="bubble x1"></div>
+    <div class="bubble x2"></div>
+    <div class="bubble x3"></div>
+    <div class="bubble x4"></div>
+    <div class="bubble x5"></div>
+    <div class="bubble x6"></div>
+    <div class="bubble x7"></div>
+    <div class="bubble x8"></div>
+    <div class="bubble x9"></div>
+    <div class="bubble x10"></div>
+</div>
     
 <div id="crome-only">
 <h2 id="accessPrompt">Enter Access Code</h2>
