--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ document.addEventListener("keydown", function (event) {
 <div id="crome-only">
 <h2 id="accessPrompt">Enter Access Code</h2>
 <input type="password" id="codeInput" placeholder="Enter code here">
-<button onclick="checkCode()">Submit</button>
+<button class="custom-btn btn-3" onclick="checkCode()">Submit</button>
 </div id="chrome-only">
 <div id="content">
     <head>
