--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function checkUserAgent() {
     showGameContainer();
   }
 }
-
+// yay
 function showGameContainer() {
   document.querySelector(".game-container").classList.remove("hidden");
   document.querySelector(".header").classList.remove("hidden");
