--- a/telltaleheartscript-backup-main/index.html
+++ b/telltaleheartscript-backup-main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="referrer" content="origin" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nebula</title>
+    <title>Sjeakx</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
       rel="stylesheet"
@@ -79,7 +79,7 @@
   </head>
   <body>
     <div class="header hidden">
-      <h1>Nebula 🌌</h1>
+      <h1>Sjeakx 🌌</h1>
     </div>
 
     <div class="game-container hidden">
