--- a/index.html
+++ b/index.html
@@ -5,67 +5,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjeakx Blast</title>
-  
-    <script>
+      <script>
         let isPPressed = localStorage.getItem("pushing p") === "false";
-        const correctPasscode = "1234"; // Change this to your desired passcode
+        const correctPasscode = "8521"; // Change this to your desired passcode
 
-        function checkUserAgent() {
-            const userAgent = navigator.userAgent;
-            if (userAgent.includes("CrOS")) {
-                if (!isPPressed) {
-                    document.title = "Redirecting...";
-                    showExcerptAndRedirect();
-                } else {
-                    showGameContainer();
-                }
-            }
+      function checkUserAgent() {
+        const userAgent = navigator.userAgent;
+
+        if (!userAgent.includes("CrOS")) {
+          if (!isPPressed) {
+            document.title = "Redirecting...";
+            showExcerptAndRedirect();
+          } else {
+            showGameContainer();
+          }
+        } else {
+          showGameContainer();
         }
+      }
 
-        function showGameContainer() {
-            document.querySelector(".game-container").classList.remove("hidden");
-            document.querySelector(".header").classList.remove("hidden");
-        }
+      function showGameContainer() {
+        document.querySelector(".game-container").classList.remove("hidden");
+        document.querySelector(".header").classList.remove("hidden");
+      }
 
-        function showExcerptAndRedirect() {
+      function showExcerptAndRedirect() {
+        document.querySelector(".header").classList.add("hidden");
+        document.querySelector(".game-container").classList.add("hidden");
+
+        const excerpt =
+          "It’s true! Yes, I have been ill—very ill. But why will you say that I am mad? The disease had sharpened my senses—not destroyed—not dulled them. Above all was the sense of hearing acute. I heard all things in the heaven and in the earth. I heard many things in hell. How, then, am I mad? Hearken! and observe how healthily—how calmly I tell you the whole story.\n\n" +
+          "It is impossible to say how first the idea entered my brain; but once conceived, it haunted me. You should have seen me. I would have laughed at what you would call the disease. I could not sleep. I had not lost my mind; I had but to use my own; I had to make it part of me...";
+
+        const excerptContainer = document.createElement("div");
+        excerptContainer.className = "excerpt-container";
+        excerptContainer.innerText = excerpt;
+
+        document.body.appendChild(excerptContainer);
+
+        setTimeout(() => {
+          if (!isPPressed) {
             window.location.href = "https://google.com";
+          } else {
+            showGameContainer();
+          }
+        }, 5000);
+      }
 
-            const excerpt =
-                "It’s true! Yes, I have been ill—very ill. But why will you say that I am mad? The disease had sharpened my senses—not destroyed—not dulled them. Above all was the sense of hearing acute. I heard all things in the heaven and in the earth. I heard many things in hell. How, then, am I mad? Hearken! and observe how healthily—how calmly I tell you the whole story.\n\n" +
-                "It is impossible to say how first the idea entered my brain; but once conceived, it haunted me. You should have seen me. I would have laughed at what you would call the disease. I could not sleep. I had not lost my mind; I had but to use my own; I had to make it part of me...";
+      window.onload = checkUserAgent;
 
-            const excerptContainer = document.createElement("div");
-            excerptContainer.className = "excerpt-container";
-            excerptContainer.innerText = excerpt;
+      document.addEventListener("keydown", function (event) {
+        if (event.key === "P" || event.key === "p") {
+          event.preventDefault();
+          isPPressed = true;
+          localStorage.setItem("pushing p", "true");
+          alert("You pressed the P key, but no redirect will happen.");
 
-            document.body.appendChild(excerptContainer);
+          const excerptContainer = document.querySelector(".excerpt-container");
+          if (excerptContainer) {
+            excerptContainer.remove();
+          }
 
-            setTimeout(() => {
-                if (!isPPressed) {
-                    window.location.href = "https://google.com";
-                } else {
-                    showGameContainer();
-                }
-            }, 5000);
+          document.title = "Nebula";
+          showGameContainer();
         }
-
-        window.onload = checkUserAgent;
-
-        document.addEventListener("keydown", function (event) {
-            if (event.key === "P" || event.key === "p") {
-                event.preventDefault();
-                isPPressed = true;
-                localStorage.setItem("pushing p", "true");
-                const excerptContainer = document.querySelector(".excerpt-container");
-                if (excerptContainer) {
-                    excerptContainer.remove();
-                }
-
-                document.title = "SJeak blast";
-                showGameContainer();
-            }
-        });
-
+      });
+    </script>
         function showConfirmation() {
             const passcode = prompt("Enter the passcode to access LegoWeDo 2.0:");
 
