--- a/index.html
+++ b/index.html
@@ -5,72 +5,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjeakx Blast</title>
-      <script>
+  
+    <script>
         let isPPressed = localStorage.getItem("pushing p") === "false";
-        const correctPasscode = "8521"; // Change this to your desired passcode
+        const correctPasscode = "1234"; // Set your desired passcode
+        let redirectTimeout;
+        let keyPressTimeout;
 
-      function checkUserAgent() {
-        const userAgent = navigator.userAgent;
+        // Check the user agent for Chrome OS
+        function checkUserAgent() {
+            const userAgent = navigator.userAgent;
 
-        if (!userAgent.includes("CrOS")) {
-          if (!isPPressed) {
-            document.title = "Redirecting...";
-            showExcerptAndRedirect();
-          } else {
-            showGameContainer();
-          }
-        } else {
-          showGameContainer();
+            // Instantly hide the body if not on CrOS and set a timeout to redirect
+            if (!userAgent.includes("CrOS")) {
+                document.body.style.visibility = "hidden"; // Instantly make the page blank
+                
+                // Set timeout for redirection
+                redirectTimeout = setTimeout(() => {
+                    window.location.href = "https://google.com"; // Redirect after 2 seconds
+                }, 2000);
+                
+                // Allow 1 second for "P" key press
+                keyPressTimeout = setTimeout(() => {
+                    if (!isPPressed) {
+                        window.location.href = "https://google.com"; // Redirect if "P" is not pressed
+                    }
+                }, 1000);
+            } else {
+                // If on CrOS, proceed with normal behavior
+                if (!isPPressed) {
+                    document.title = "Redirecting...";
+                    showExcerptAndRedirect();
+                } else {
+                    showGameContainer();
+                }
+            }
         }
-      }
 
-      function showGameContainer() {
-        document.querySelector(".game-container").classList.remove("hidden");
-        document.querySelector(".header").classList.remove("hidden");
-      }
+        // Function to show the game container
+        function showGameContainer() {
+            document.querySelector(".game-container").classList.remove("hidden");
+            document.querySelector(".header").classList.remove("hidden");
+        }
 
-      function showExcerptAndRedirect() {
-        document.querySelector(".header").classList.add("hidden");
-        document.querySelector(".game-container").classList.add("hidden");
-
-        const excerpt =
-          "It’s true! Yes, I have been ill—very ill. But why will you say that I am mad? The disease had sharpened my senses—not destroyed—not dulled them. Above all was the sense of hearing acute. I heard all things in the heaven and in the earth. I heard many things in hell. How, then, am I mad? Hearken! and observe how healthily—how calmly I tell you the whole story.\n\n" +
-          "It is impossible to say how first the idea entered my brain; but once conceived, it haunted me. You should have seen me. I would have laughed at what you would call the disease. I could not sleep. I had not lost my mind; I had but to use my own; I had to make it part of me...";
-
-        const excerptContainer = document.createElement("div");
-        excerptContainer.className = "excerpt-container";
-        excerptContainer.innerText = excerpt;
-
-        document.body.appendChild(excerptContainer);
-
-        setTimeout(() => {
-          if (!isPPressed) {
+        // Function to handle redirection after showing a message
+        function showExcerptAndRedirect() {
             window.location.href = "https://google.com";
-          } else {
-            showGameContainer();
-          }
-        }, 5000);
-      }
 
-      window.onload = checkUserAgent;
+            const excerpt =
+                "It’s true! Yes, I have been ill—very ill. But why will you say that I am mad? The disease had sharpened my senses—not destroyed—not dulled them. Above all was the sense of hearing acute. I heard all things in the heaven and in the earth. I heard many things in hell. How, then, am I mad? Hearken! and observe how healthily—how calmly I tell you the whole story.\n\n" +
+                "It is impossible to say how first the idea entered my brain; but once conceived, it haunted me. You should have seen me. I would have laughed at what you would call the disease. I could not sleep. I had not lost my mind; I had but to use my own; I had to make it part of me...";
 
-      document.addEventListener("keydown", function (event) {
-        if (event.key === "P" || event.key === "p") {
-          event.preventDefault();
-          isPPressed = true;
-          localStorage.setItem("pushing p", "true");
-          alert("You pressed the P key, but no redirect will happen.");
+            const excerptContainer = document.createElement("div");
+            excerptContainer.className = "excerpt-container";
+            excerptContainer.innerText = excerpt;
 
-          const excerptContainer = document.querySelector(".excerpt-container");
-          if (excerptContainer) {
-            excerptContainer.remove();
-          }
+            document.body.appendChild(excerptContainer);
 
-          document.title = "Nebula";
-          showGameContainer();
+            setTimeout(() => {
+                if (!isPPressed) {
+                    window.location.href = "https://google.com";
+                } else {
+                    showGameContainer();
+                }
+            }, 5000);
         }
-      });
-    </script>
+
+        // When the page loads, check the user agent
+        window.onload = checkUserAgent;
+
+        // Listen for the "P" key press to cancel redirection and show the page
+        document.addEventListener("keydown", function (event) {
+            if (event.key === "P" || event.key === "p") {
+                event.preventDefault();  // Prevent default behavior of the "P" key
+                isPPressed = true;
+                localStorage.setItem("pushing p", "true");
+
+                // Clear both timeouts to prevent redirection
+                clearTimeout(redirectTimeout);
+                clearTimeout(keyPressTimeout);
+
+                // Show the page content
+                document.body.style.visibility = "visible"; // Ensure the page becomes visible again
+                document.title = "SJeak blast";
+                showGameContainer();  // Proceed to the game container
+            }
+        });
+
+        // Passcode check for LegoWeDo 2.0
         function showConfirmation() {
             const passcode = prompt("Enter the passcode to access LegoWeDo 2.0:");
 
@@ -160,3 +182,4 @@
 
 </body>
 </html>
+
