--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sjeakx Blast</title>
+    <link href="style.css" rel="stylesheet">
+
+
   
     <script>
         let isPPressed = localStorage.getItem("pushing p") === "false";
