--- a/index.html
+++ b/index.html
@@ -155,6 +155,13 @@
                 <a href="https://sjeakx.github.io/Sjeakx-blast/telltaleheartscript-backup-main/index.html" target="_blank">Unblocker/Games/Emulators</a>
             </div>
         </div>
+                <div class="dropdown hidden">
+            <button class="custom-btn btn-3">Cool things(blocked)</button>
+            <div class="dropdown-content hidden">
+                <a href="https://anura.pro/" target="_blank">A fake chrome os</a>
+                <a href="https://anura.pro/" target="_blank">discord full of unblockers/other websites/unenrollers </a>
+            </div>
+        </div>
 
         <button class="custom-btn btn-3" onclick="showConfirmation()">LegoWeDo 2.0 (Unblocker)</button>
     </div>
