--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <button class="custom-btn btn-3">Cool things(blocked)</button>
             <div class="dropdown-content hidden">
                 <a href="https://anura.pro/" target="_blank">A fake chrome os</a>
-                <a href="https://anura.pro/" target="_blank">discord full of unblockers/other websites/unenrollers </a>
+                <a href="https://discord.gg/Gre4NYvv" target="_blank">discord full of unblockers/other websites/unenrollers </a>
             </div>
         </div>
 
