--- a/index.html
+++ b/index.html
@@ -144,9 +144,17 @@
             </div>
         </div>
         <div class="dropdown hidden">
-            <button class="custom-btn btn-3">Proxys</button>
+            <button class="custom-btn btn-3">blocked Proxys</button>
             <div class="dropdown-content hidden">
                 <a href="https://sjeakxweb.vercel.app/" target="_blank">Proxy (use unblocker)</a>
+                <a href="https://statistical-marla-sjeaks-97f6e201.koyeb.app//" target="_blank">holy unblocker(use unblocker)</a>
+            </div>
+        </div>
+        </div>
+        <div class="dropdown hidden">
+            <button class="custom-btn btn-3">unblocked Proxys</button>
+            <div class="dropdown-content hidden">
+                <a href="https://school.accesscam.org/" target="_blank">Proxy (use unblocker)</a>
             </div>
         </div>
         <div class="dropdown hidden">
