--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
             <div class="dropdown-content hidden">
                 <a href="https://anura.pro/" target="_blank">A fake chrome os</a>
                 <a href="https://discord.gg/Gre4NYvv" target="_blank">discord full of unblockers/other websites/unenrollers </a>
+                <a href="hhttps://statistical-marla-sjeaks-97f6e201.koyeb.app/" target="_blank">games/poxy/emulators advanced</a>
             </div>
         </div>
 
